tests/matrices/invalid/invalid_truncated_header_1.mtx
%%MatrixMarket matrix array real general
% no dimension line
